# scbl-utils

./: .gitignore  .pre-commit-config.yaml  README.md  newpeople.csv  pyproject.toml  samplesheet.yml  test.csv  test.yml  z.py
.github/workflows/: pytest_isort_black.yml
scbl_utils/: config.py  config_classes.py  core.py  data_io.py  data_io_utils.py  db_query.py  db_utils.py  defaults.py  gdrive.py  main.py  pydantic_model_config.py  utils.py  validated_types.py  validation.py
scbl_utils/config_models/: db.py  gdrive.py  system.py
scbl_utils/core/: data_io.py  db.py  gdrive.py  utils.py  validation.py
scbl_utils/data_io/: validators.py
scbl_utils/db/: core.py  helpers.py  validators.py
scbl_utils/db/orm/: base.py  custom_types.py
scbl_utils/db/orm/models/: data.py  entities.py
scbl_utils/db_models/: base.py  bases.py  column_types.py  data.py  data_metadata.py  definitions.py  disassociative.py  join_tables.py  metadata_models.py  researcher_metadata.py  type_shortcuts.py
scbl_utils/db_models/data_models/: chromium.py  xenium.py
scbl_utils/gdrive/: core.py
scbl_utils/json_schemas/: config_schemas.py  data_schemas.py
scbl_utils/utils/: defaults.py  gdrive.py  samplesheet.py  validate.py
tests/: conftest.py  generate_test_data.py  test_data_io.py  test_defaults.py  test_gdrive.py  test_main.py  test_samplesheet_from_gdrive.py
tests/data/: Assay.csv  ChromiumLibraryType.csv  Institution.csv  correct-output-ref_path-as-str.yml  correct-output.yml  test-trackingsheet.csv
tests/fixtures/: db_fixtures.py  gdrive_fixtures.py  main_fixtures.py
tests/fixtures/db/: chromium_data.py  entity_data.py  utils.py
tests/google-drive_data/: main_sheet.csv  multiplexing_sheet.csv
tests/outputs/: test-samplesheet.yml
tests/test_core/: test_db.py  test_gdrive.py
tests/test_db/: db_fixtures.py  test_core.py  test_helpers.py  test_io.py
tests/test_db/test_data/: generate_test_csvs.py
tests/test_db/test_data/input_data/: institution.csv  lab.csv  librarytype.csv  person.csv  platform.csv  tag.csv
tests/test_db/test_models/: test_data_models.py  test_definition_models.py
tests/test_db_models/: test_bases.py  test_data_models.py
tests/test_db_models/test_models/: test_data_models.py
tests/util_testing/: test_gdrive.py  test_samplesheet.py  test_validate.py
tests/well_formatted_data/: Assay.csv  ChromiumDataSet.csv  ChromiumTag.csv  Lab.csv  Person.csv  Platform.csv
