[tool.poetry]
name = "scbl-utils"
version = "0.1.4"
description = "A set of command-line utilities that facilitate data processing at the Single Cell Biology Lab at the Jackson Laboratory."
authors = ["Ahmed Said <ahmed.said@jax.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJacksonLaboratory/scbl-utils/"
documentation = "https://github.com/TheJacksonLaboratory/scbl-utils/"

[tool.poetry.scripts]
scbl-utils = 'scbl_utils.main:app'

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = {extras = ["html"], version = "^2.1.1"}
typer = {extras = ["all"], version = "^0.9.0"}
PyYAML = "^6.0.1"
gspread = "^5.11.3"
google-api-python-client = "^2.103.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
