[tool.poetry]
name = "scbl-utils"
version = "2.0.0"
description = "A set of command-line utilities that facilitate data processing at the Single Cell Biology Lab at the Jackson Laboratory."
authors = ["Ahmed Said <ahmed.said@jax.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJacksonLaboratory/scbl-utils/"
documentation = "https://github.com/TheJacksonLaboratory/scbl-utils/"

[tool.poetry.scripts]
scbl-utils = 'scbl_utils.main:app'

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
typer = {extras = ["all"], version = "^0.9.0"}
PyYAML = "^6.0.1"
gspread = "^5.12.2"
jsonschema = "^4.20.0"
email-validator = "^2.1.0.post1"
sqlalchemy = "^2.0.23"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
